# fastapi-sample

server/: pyproject.toml
server/data/: sample_item.json
server/sample_backend/: main.py
server/tests/: test_sample_backend.py
