[tool.poetry]
name = "sample-backend"
version = "0.1.0"
description = ""
authors = ["Hyakkun <seraphim@hyakkun.net>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
